Add new languages and bugfix created-at.tsx component

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -6,6 +6,7 @@
   "lightThemeText": "Light",
   "darkThemeText": "Dark",
   "systemThemeText": "System",
+  "createdAt": "Created at:",
   "settingsTitle": "Settings",
   "languageTitle": "Language",
   "downloadAllContent": "Download my content to this computer in text file",
