--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -6,6 +6,7 @@
   "lightThemeText": "Luma",
   "darkThemeText": "Malhela",
   "systemThemeText": "Sistema",
+  "createdAt": "Kreita ĉe:",
   "settingsTitle": "Agordoj",
   "languageTitle": "Lingvo",
   "downloadAllContent": "Elŝutu mian enhavon al ĉi tiu komputilo en tekstdosiero",
