--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -1,7 +1,7 @@
 {
   "noContentTitle": "Ankoraŭ ne ekzistas enhavo.",
   "noContentDescription": "Bonvolu aldoni iom da enhavo unue.",
-  "browserSavedContentWarn": "Via enhavo estos konservita en via retumilo!",
+  "browserSavedContentWarn": "Pro sekurecaj kialoj, ne estas rekomendinde uzi ĉi tiun aplikaĵon en publika aŭ komuna komputilo kaj retumilo. Viaj notoj povas esti videblaj por aliaj.",
   "newContentInput": "Aldonu vian taskon ĉi tie. Klaku konservi kiam vi finis.",
   "lightThemeText": "Luma",
   "darkThemeText": "Malhela",
