Develop download components

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -9,7 +9,8 @@
   "createdAt": "Erstellt am:",
   "settingsTitle": "Einstellungen",
   "languageTitle": "Sprache",
-  "downloadAllContent": "Lade meinen Inhalt als Textdatei auf diesen Computer herunter.",
+  "downloadAllContentAsText": "Lade meinen Inhalt als normale Textdatei (.txt) auf diesen Computer herunter",
+  "downloadAllContentAsJson": "Lade meinen Inhalt als JSON-Datei (.json) auf diesen Computer herunter",
   "deleteAllContent": "Lösche alle Inhalte in diesem Browser.",
   "footerLineLicensed": "Diese Website ist Open Source und unter der MIT-Lizenz lizenziert.",
   "footerLineNoCookies": "Diese Website verwendet keine Cookies und sammelt keine Daten über dich.",
