--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -9,7 +9,8 @@
   "createdAt": "Created at:",
   "settingsTitle": "Settings",
   "languageTitle": "Language",
-  "downloadAllContent": "Download my content to this computer in text file",
+  "downloadAllContentAsText": "Download my content to this computer in regular text file (.txt)",
+  "downloadAllContentAsJson": "Download my content to this computer in JSON file (.json)",
   "deleteAllContent": "Delete all contents in this browser",
   "footerLineLicensed": "This website is open source and licensed under MIT.",
   "footerLineNoCookies": "This website is does not use cookies and collect data about you.",
