--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -9,7 +9,8 @@
   "createdAt": "Creado en:",
   "settingsTitle": "Ajustes",
   "languageTitle": "Idioma",
-  "downloadAllContent": "Descarga mi contenido a este ordenador en un archivo de texto.",
+  "downloadAllContentAsText": "Descargar mi contenido a este ordenador en un archivo de texto sin formato (.txt)",
+  "downloadAllContentAsJson": "Descargar mi contenido a este ordenador en un archivo JSON (.json)",
   "deleteAllContent": "Eliminar todo el contenido en este navegador.",
   "footerLineLicensed": "Este sitio web es de código abierto y tiene licencia MIT.",
   "footerLineNoCookies": "Este sitio web no utiliza cookies ni recopila datos sobre ti.",
