--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -9,7 +9,8 @@
   "createdAt": "Kreita ĉe:",
   "settingsTitle": "Agordoj",
   "languageTitle": "Lingvo",
-  "downloadAllContent": "Elŝutu mian enhavon al ĉi tiu komputilo en tekstdosiero",
+  "downloadAllContentAsText": "Elŝutu mian enhavon al ĉi tiu komputilo kiel simplan tekstdosieron (.txt)",
+  "downloadAllContentAsJson": "Elŝutu mian enhavon al ĉi tiu komputilo kiel JSON-dosieron (.json)",
   "deleteAllContent": "Forigu ĉiujn enhavojn en ĉi tiu retumilo",
   "footerLineLicensed": "Ĉi tiu retejo estas malfermita kodo kaj licencita sub MIT.",
   "footerLineNoCookies": "Ĉi tiu retejo ne uzas kuketojn kaj ne kolektas datumojn pri vi.",
