Develop settings components

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -12,7 +12,9 @@
   "downloadTitle": "Herunterladen",
   "downloadAllContentAsText": "Lade meinen Inhalt als normale Textdatei (.txt) auf diesen Computer herunter",
   "downloadAllContentAsJson": "Lade meinen Inhalt als JSON-Datei (.json) auf diesen Computer herunter",
+  "deleteTitle": "Löschen",
   "deleteAllContent": "Lösche alle Inhalte in diesem Browser.",
+  "deleteCompletedContent": "Nur die erledigten Inhalte in diesem Browser löschen",
   "footerLineLicensed": "Diese Website ist Open Source und unter der MIT-Lizenz lizenziert.",
   "footerLineNoCookies": "Diese Website verwendet keine Cookies und sammelt keine Daten über dich.",
   "footerLineUseLocalStorage": "Es wird nur der lokale Speicher verwendet, um deine To-Do-Liste zu speichern.",
