--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -12,7 +12,9 @@
   "downloadTitle": "Download",
   "downloadAllContentAsText": "Download my content to this computer in regular text file (.txt)",
   "downloadAllContentAsJson": "Download my content to this computer in JSON file (.json)",
+  "deleteTitle": "Delete",
   "deleteAllContent": "Delete all contents in this browser",
+  "deleteCompletedContent": "Delete only completed contents in this browser",
   "footerLineLicensed": "This website is open source and licensed under MIT.",
   "footerLineNoCookies": "This website is does not use cookies and collect data about you.",
   "footerLineUseLocalStorage": "Only use local storage to save your to-do list.",
