--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -12,7 +12,9 @@
   "downloadTitle": "Elŝutu",
   "downloadAllContentAsText": "Elŝutu mian enhavon al ĉi tiu komputilo kiel simplan tekstdosieron (.txt)",
   "downloadAllContentAsJson": "Elŝutu mian enhavon al ĉi tiu komputilo kiel JSON-dosieron (.json)",
+  "deleteTitle": "Forigi",
   "deleteAllContent": "Forigu ĉiujn enhavojn en ĉi tiu retumilo",
+  "deleteCompletedContent": "Forigi nur la finitan enhavon en ĉi tiu retumilo",
   "footerLineLicensed": "Ĉi tiu retejo estas malfermita kodo kaj licencita sub MIT.",
   "footerLineNoCookies": "Ĉi tiu retejo ne uzas kuketojn kaj ne kolektas datumojn pri vi.",
   "footerLineUseLocalStorage": "Nur uzi lokan stokadon por konservi vian farendaĵliston.",
