--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -12,7 +12,9 @@
   "downloadTitle": "Descargar",
   "downloadAllContentAsText": "Descargar mi contenido a este ordenador en un archivo de texto sin formato (.txt)",
   "downloadAllContentAsJson": "Descargar mi contenido a este ordenador en un archivo JSON (.json)",
+  "deleteTitle": "Borrar",
   "deleteAllContent": "Eliminar todo el contenido en este navegador.",
+  "deleteCompletedContent": "Eliminar solo el contenido completado en este navegador",
   "footerLineLicensed": "Este sitio web es de código abierto y tiene licencia MIT.",
   "footerLineNoCookies": "Este sitio web no utiliza cookies ni recopila datos sobre ti.",
   "footerLineUseLocalStorage": "Solo se utiliza el almacenamiento local para guardar tu lista de tareas.",
