--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -9,6 +9,8 @@
   "createdAt": "Creado en:",
   "settingsTitle": "Ajustes",
   "languageTitle": "Idioma",
+  "uploadTitle": "Subir",
+  "uploadCompatibleFile": "Subir contenido compatible desde un archivo JSON (.json)",
   "downloadTitle": "Descargar",
   "downloadAllContentAsText": "Descargar mi contenido a este ordenador en un archivo de texto sin formato (.txt)",
   "downloadAllContentAsJson": "Descargar mi contenido a este ordenador en un archivo JSON (.json)",
