Refactor component structure and update imports for clarity

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -20,7 +20,7 @@
   "footerLineUseLocalStorage": "Es wird nur der lokale Speicher verwendet, um deine To-Do-Liste zu speichern.",
   "footerLineMoreInformation": "Für weitere Informationen besuche bitte das Projekt-Repository.",
   "footerLineThankYou": "Vielen Dank für deinen Besuch und dein Interesse! 👍️",
-  "footerLineCreatedBy": "Erstellt von Levente in 2024 - 2025",
+  "footerLineCreatedBy": "Erstellt von Levente in 2025",
   "footerRepositoryLink": "Repository",
   "footerLicenseLink": "Lizenz"
 }
