--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -20,7 +20,7 @@
   "footerLineUseLocalStorage": "Only use local storage to save your to-do list.",
   "footerLineMoreInformation": "For more information please visit the project repository.",
   "footerLineThankYou": "Thank you for your visiting and intrest! 👍️",
-  "footerLineCreatedBy": "Created by Levente in 2024 - 2025",
+  "footerLineCreatedBy": "Created by Levente in 2025",
   "footerRepositoryLink": "Repository",
   "footerLicenseLink": "License"
 }
