--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -20,7 +20,7 @@
   "footerLineUseLocalStorage": "Nur uzi lokan stokadon por konservi vian farendaĵliston.",
   "footerLineMoreInformation": "Por pliaj informoj, bonvolu viziti la projektan deponejon.",
   "footerLineThankYou": "Dankon pro via vizito kaj intereso! 👍️",
-  "footerLineCreatedBy": "Kreita de Levente en 2024 - 2025",
+  "footerLineCreatedBy": "Kreita de Levente en 2025",
   "footerRepositoryLink": "Deponejo",
   "footerLicenseLink": "Licenco"
 }
