--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -20,7 +20,7 @@
   "footerLineUseLocalStorage": "Solo se utiliza el almacenamiento local para guardar tu lista de tareas.",
   "footerLineMoreInformation": "Para más información, visita el repositorio del proyecto.",
   "footerLineThankYou": "¡Gracias por tu visita e interés! 👍️",
-  "footerLineCreatedBy": "Creado por Levente en 2024 - 2025",
+  "footerLineCreatedBy": "Creado por Levente en 2025",
   "footerRepositoryLink": "Repositorio",
   "footerLicenseLink": "Licencia"
 }
