Add language translations for color options in localization files

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -9,9 +9,20 @@
   "createdAt": "Erstellt am:",
   "settingsTitle": "Einstellungen",
   "languageTitle": "Sprache",
+  "englishLanguageText": "Englisch",
+  "esperantoLanguageText": "Esperanto",
+  "germanLanguageText": "Deutsch",
+  "spanishLanguageText": "Spanisch",
   "downloadTitle": "Herunterladen",
   "downloadAllContentAsText": "Lade meinen Inhalt als normale Textdatei (.txt) auf diesen Computer herunter",
   "downloadAllContentAsJson": "Lade meinen Inhalt als JSON-Datei (.json) auf diesen Computer herunter",
+  "defaultColor": "Standardfarbe",
+  "grayColor": "grau",
+  "yellowColor": "gelb",
+  "redColor": "rot",
+  "blueColor": "blau",
+  "greenColor": "grün",
+  "pinkColor": "rosa",
   "deleteTitle": "Löschen",
   "deleteAllContent": "Lösche alle Inhalte in diesem Browser.",
   "deleteCompletedContent": "Nur die erledigten Inhalte in diesem Browser löschen",
