--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -9,9 +9,20 @@
   "createdAt": "Created at:",
   "settingsTitle": "Settings",
   "languageTitle": "Language",
+  "englishLanguageText": "English",
+  "esperantoLanguageText": "Esperanto",
+  "germanLanguageText": "German",
+  "spanishLanguageText": "Spanish",
   "downloadTitle": "Download",
   "downloadAllContentAsText": "Download my content to this computer in regular text file (.txt)",
   "downloadAllContentAsJson": "Download my content to this computer in JSON file (.json)",
+  "defaultColor": "Default color",
+  "grayColor": "gray",
+  "yellowColor": "yellow",
+  "redColor": "red",
+  "blueColor": "blue",
+  "greenColor": "green",
+  "pinkColor": "pink",
   "deleteTitle": "Delete",
   "deleteAllContent": "Delete all contents in this browser",
   "deleteCompletedContent": "Delete only completed contents in this browser",
