--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -9,9 +9,20 @@
   "createdAt": "Kreita ĉe:",
   "settingsTitle": "Agordoj",
   "languageTitle": "Lingvo",
+  "englishLanguageText": "Angla",
+  "esperantoLanguageText": "Esperanto",
+  "germanLanguageText": "Germana",
+  "spanishLanguageText": "Hispana",
   "downloadTitle": "Elŝutu",
   "downloadAllContentAsText": "Elŝutu mian enhavon al ĉi tiu komputilo kiel simplan tekstdosieron (.txt)",
   "downloadAllContentAsJson": "Elŝutu mian enhavon al ĉi tiu komputilo kiel JSON-dosieron (.json)",
+  "defaultColor": "Defaŭlta koloro",
+  "grayColor": "griza",
+  "yellowColor": "flava",
+  "redColor": "ruĝa",
+  "blueColor": "blua",
+  "greenColor": "verda",
+  "pinkColor": "rozkolora",
   "deleteTitle": "Forigi",
   "deleteAllContent": "Forigu ĉiujn enhavojn en ĉi tiu retumilo",
   "deleteCompletedContent": "Forigi nur la finitan enhavon en ĉi tiu retumilo",
