--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -9,9 +9,20 @@
   "createdAt": "Creado en:",
   "settingsTitle": "Ajustes",
   "languageTitle": "Idioma",
+  "englishLanguageText": "Inglés",
+  "esperantoLanguageText": "Esperanto",
+  "germanLanguageText": "Alemán",
+  "spanishLanguageText": "Español",
   "downloadTitle": "Descargar",
   "downloadAllContentAsText": "Descargar mi contenido a este ordenador en un archivo de texto sin formato (.txt)",
   "downloadAllContentAsJson": "Descargar mi contenido a este ordenador en un archivo JSON (.json)",
+  "defaultColor": "Color por defecto",
+  "grayColor": "gris",
+  "yellowColor": "amarillo",
+  "redColor": "rojo",
+  "blueColor": "azul",
+  "greenColor": "verde",
+  "pinkColor": "rosa",
   "deleteTitle": "Borrar",
   "deleteAllContent": "Eliminar todo el contenido en este navegador.",
   "deleteCompletedContent": "Eliminar solo el contenido completado en este navegador",
