--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -3,6 +3,8 @@
   "noContentDescription": "Please add some content first.",
   "browserSavedContentWarn": "For security reasons, it is not recommended to use this application on a public or shared computer and browser. Your notes may be visible to others.",
   "newContentInput": "Add your todo here. Click save when you're done.",
+  "newContentInputCharacters": "You have {{count}} more characters allowed.",
+  "newContentInputExceeded": "You have exceeded the allowed number of characters.",
   "lightThemeText": "Light",
   "darkThemeText": "Dark",
   "systemThemeText": "System",
