Update translations to reflect task terminology in multiple languages

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,8 +1,8 @@
 {
-  "noContentTitle": "There is no any content yet.",
-  "noContentDescription": "Please add some content first.",
+  "noContentTitle": "There is no any tasks yet.",
+  "noContentDescription": "Please add some task first.",
   "browserSavedContentWarn": "For security reasons, it is not recommended to use this application on a public or shared computer and browser. Your notes may be visible to others.",
-  "newContentInput": "Add your todo here. Click save when you're done.",
+  "newContentInput": "Add your task here. Click save when you're done.",
   "newContentInputCharacters": "You have {{count}} more characters allowed.",
   "newContentInputExceeded": "You have exceeded the allowed number of characters.",
   "lightThemeText": "Light",
@@ -16,8 +16,8 @@
   "germanLanguageText": "German",
   "spanishLanguageText": "Spanish",
   "downloadTitle": "Download",
-  "downloadAllContentAsText": "Download my content to this computer in regular text file (.txt)",
-  "downloadAllContentAsJson": "Download my content to this computer in JSON file (.json)",
+  "downloadAllContentAsText": "Download my task(s) to this computer in regular text file (.txt)",
+  "downloadAllContentAsJson": "Download my task(s) to this computer in JSON file (.json)",
   "defaultColor": "Default color",
   "grayColor": "gray",
   "yellowColor": "yellow",
@@ -26,11 +26,11 @@
   "greenColor": "green",
   "pinkColor": "pink",
   "deleteTitle": "Delete",
-  "deleteAllContent": "Delete all contents in this browser",
-  "deleteCompletedContent": "Delete only completed contents in this browser",
+  "deleteAllContent": "Delete all task(s) in this browser",
+  "deleteCompletedContent": "Delete only completed task(s) in this browser",
   "footerLineLicensed": "This website is open source and licensed under MIT.",
   "footerLineNoCookies": "This website is does not use cookies and collect data about you.",
-  "footerLineUseLocalStorage": "Only use local storage to save your to-do list.",
+  "footerLineUseLocalStorage": "Only use local storage to save your tasks list.",
   "footerLineMoreInformation": "For more information please visit the project repository.",
   "footerLineThankYou": "Thank you for your visiting and intrest! 👍️",
   "footerLineCreatedBy": "Created by Levente in 2025",
