--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -1,6 +1,6 @@
 {
-  "noContentTitle": "Aún no hay contenido.",
-  "noContentDescription": "Por favor, añade contenido primero.",
+  "noContentTitle": "Aún no hay tareas.",
+  "noContentDescription": "Por favor, añade alguna tarea primero.",
   "browserSavedContentWarn": "Por razones de seguridad, no se recomienda usar esta aplicación en un ordenador y navegador públicos o compartidos. Tus notas podrían ser visibles para otros.",
   "newContentInput": "Añade tu tarea aquí. Haz clic en guardar cuando hayas terminado.",
   "newContentInputCharacters": "Te quedan {{count}} caracteres permitidos.",
@@ -16,18 +16,18 @@
   "germanLanguageText": "Alemán",
   "spanishLanguageText": "Español",
   "downloadTitle": "Descargar",
-  "downloadAllContentAsText": "Descargar mi contenido a este ordenador en un archivo de texto sin formato (.txt)",
-  "downloadAllContentAsJson": "Descargar mi contenido a este ordenador en un archivo JSON (.json)",
-  "defaultColor": "Color por defecto",
+  "downloadAllContentAsText": "Descargar mis tareas a este ordenador en un archivo de texto normal (.txt)",
+  "downloadAllContentAsJson": "Descargar mis tareas a este ordenador en un archivo JSON (.json)",
+  "defaultColor": "Color predeterminado",
   "grayColor": "gris",
   "yellowColor": "amarillo",
   "redColor": "rojo",
   "blueColor": "azul",
   "greenColor": "verde",
   "pinkColor": "rosa",
-  "deleteTitle": "Borrar",
-  "deleteAllContent": "Eliminar todo el contenido en este navegador.",
-  "deleteCompletedContent": "Eliminar solo el contenido completado en este navegador",
+  "deleteTitle": "Eliminar",
+  "deleteAllContent": "Eliminar todas las tareas en este navegador",
+  "deleteCompletedContent": "Eliminar solo las tareas completadas en este navegador",
   "footerLineLicensed": "Este sitio web es de código abierto y tiene licencia MIT.",
   "footerLineNoCookies": "Este sitio web no utiliza cookies ni recopila datos sobre ti.",
   "footerLineUseLocalStorage": "Solo se utiliza el almacenamiento local para guardar tu lista de tareas.",
