--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -1,37 +1,37 @@
 {
-  "noContentTitle": "Ankoraŭ ne ekzistas enhavo.",
-  "noContentDescription": "Bonvolu aldoni iom da enhavo unue.",
+  "noContentTitle": "Ankoraŭ ne ekzistas taskoj.",
+  "noContentDescription": "Bonvolu aldoni iom da taskoj unue.",
   "browserSavedContentWarn": "Pro sekurecaj kialoj, ne estas rekomendinde uzi ĉi tiun aplikaĵon en publika aŭ komuna komputilo kaj retumilo. Viaj notoj povas esti videblaj por aliaj.",
   "newContentInput": "Aldonu vian taskon ĉi tie. Klaku konservi kiam vi finis.",
-  "newContentInputCharacters": "Vi havas {{count}} pliajn karakterojn permesitajn.",
-  "newContentInputExceeded": "Vi superis la permesitan nombron da karakteroj.",
+  "newContentInputCharacters": "Vi havas {{count}} pliajn signojn permesitaj.",
+  "newContentInputExceeded": "Vi superis la permesitan nombron da signoj.",
   "lightThemeText": "Luma",
   "darkThemeText": "Malhela",
   "systemThemeText": "Sistema",
-  "createdAt": "Kreita ĉe:",
+  "createdAt": "Kreita je:",
   "settingsTitle": "Agordoj",
   "languageTitle": "Lingvo",
   "englishLanguageText": "Angla",
   "esperantoLanguageText": "Esperanto",
   "germanLanguageText": "Germana",
   "spanishLanguageText": "Hispana",
-  "downloadTitle": "Elŝutu",
-  "downloadAllContentAsText": "Elŝutu mian enhavon al ĉi tiu komputilo kiel simplan tekstdosieron (.txt)",
-  "downloadAllContentAsJson": "Elŝutu mian enhavon al ĉi tiu komputilo kiel JSON-dosieron (.json)",
+  "downloadTitle": "Elŝuti",
+  "downloadAllContentAsText": "Elŝuti miajn taskojn al ĉi tiu komputilo en normala tekstdosiero (.txt)",
+  "downloadAllContentAsJson": "Elŝuti miajn taskojn al ĉi tiu komputilo en JSON-dosiero (.json)",
   "defaultColor": "Defaŭlta koloro",
   "grayColor": "griza",
   "yellowColor": "flava",
   "redColor": "ruĝa",
   "blueColor": "blua",
   "greenColor": "verda",
-  "pinkColor": "rozkolora",
+  "pinkColor": "roza",
   "deleteTitle": "Forigi",
-  "deleteAllContent": "Forigu ĉiujn enhavojn en ĉi tiu retumilo",
-  "deleteCompletedContent": "Forigi nur la finitan enhavon en ĉi tiu retumilo",
+  "deleteAllContent": "Forigi ĉiujn taskojn en ĉi tiu retumilo",
+  "deleteCompletedContent": "Forigi nur plenumitajn taskojn en ĉi tiu retumilo",
   "footerLineLicensed": "Ĉi tiu retejo estas malfermita kodo kaj licencita sub MIT.",
   "footerLineNoCookies": "Ĉi tiu retejo ne uzas kuketojn kaj ne kolektas datumojn pri vi.",
-  "footerLineUseLocalStorage": "Nur uzi lokan stokadon por konservi vian farendaĵliston.",
-  "footerLineMoreInformation": "Por pliaj informoj, bonvolu viziti la projektan deponejon.",
+  "footerLineUseLocalStorage": "Nur uzi lokan stokadon por konservi vian taskliston.",
+  "footerLineMoreInformation": "Por pliaj informoj, bonvolu viziti la projekto-deponejon.",
   "footerLineThankYou": "Dankon pro via vizito kaj intereso! 👍️",
   "footerLineCreatedBy": "Kreita de Levente en 2025",
   "footerRepositoryLink": "Deponejo",
