Update input field labels in localization files for consistency

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -2,9 +2,9 @@
   "noContentTitle": "Es sind noch keine Aufgaben vorhanden.",
   "noContentDescription": "Bitte füge zuerst eine Aufgabe hinzu.",
   "browserSavedContentWarn": "Aus Sicherheitsgründen wird davon abgeraten, diese Anwendung auf einem öffentlichen oder gemeinsam genutzten Computer und Browser zu verwenden. Deine Notizen könnten für andere sichtbar sein.",
-  "newContentInput": "Füge deine Aufgabe hier hinzu. Klicke auf Speichern, wenn du fertig bist.",
-  "newContentInputCharacters": "Du hast noch {{count}} Zeichen übrig.",
-  "newContentInputExceeded": "Du hast die zulässige Zeichenanzahl überschritten.",
+  "newHeaderInput": "Füge deine Aufgabe hier hinzu. Klicke auf Speichern, wenn du fertig bist.",
+  "newHeaderInputCharacters": "Du hast noch {{count}} Zeichen übrig.",
+  "newHeaderInputExceeded": "Du hast die zulässige Zeichenanzahl überschritten.",
   "lightThemeText": "Hell",
   "darkThemeText": "Dunkel",
   "systemThemeText": "System",
