--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -2,9 +2,9 @@
   "noContentTitle": "There is no any tasks yet.",
   "noContentDescription": "Please add some task first.",
   "browserSavedContentWarn": "For security reasons, it is not recommended to use this application on a public or shared computer and browser. Your notes may be visible to others.",
-  "newContentInput": "Add your task here. Click save when you're done.",
-  "newContentInputCharacters": "You have {{count}} more characters allowed.",
-  "newContentInputExceeded": "You have exceeded the allowed number of characters.",
+  "newHeaderInput": "Add your task here. Click save when you're done.",
+  "newHeaderInputCharacters": "You have {{count}} more characters allowed.",
+  "newHeaderInputExceeded": "You have exceeded the allowed number of characters.",
   "lightThemeText": "Light",
   "darkThemeText": "Dark",
   "systemThemeText": "System",
