--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -2,9 +2,9 @@
   "noContentTitle": "Ankoraŭ ne ekzistas taskoj.",
   "noContentDescription": "Bonvolu aldoni iom da taskoj unue.",
   "browserSavedContentWarn": "Pro sekurecaj kialoj, ne estas rekomendinde uzi ĉi tiun aplikaĵon en publika aŭ komuna komputilo kaj retumilo. Viaj notoj povas esti videblaj por aliaj.",
-  "newContentInput": "Aldonu vian taskon ĉi tie. Klaku konservi kiam vi finis.",
-  "newContentInputCharacters": "Vi havas {{count}} pliajn signojn permesitaj.",
-  "newContentInputExceeded": "Vi superis la permesitan nombron da signoj.",
+  "newHeaderInput": "Aldonu vian taskon ĉi tie. Klaku konservi kiam vi finis.",
+  "newHeaderInputCharacters": "Vi havas {{count}} pliajn signojn permesitaj.",
+  "newHeaderInputExceeded": "Vi superis la permesitan nombron da signoj.",
   "lightThemeText": "Luma",
   "darkThemeText": "Malhela",
   "systemThemeText": "Sistema",
