--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -2,9 +2,9 @@
   "noContentTitle": "Aún no hay tareas.",
   "noContentDescription": "Por favor, añade alguna tarea primero.",
   "browserSavedContentWarn": "Por razones de seguridad, no se recomienda usar esta aplicación en un ordenador y navegador públicos o compartidos. Tus notas podrían ser visibles para otros.",
-  "newContentInput": "Añade tu tarea aquí. Haz clic en guardar cuando hayas terminado.",
-  "newContentInputCharacters": "Te quedan {{count}} caracteres permitidos.",
-  "newContentInputExceeded": "Has excedido el número permitido de caracteres.",
+  "newHeaderInputInput": "Añade tu tarea aquí. Haz clic en guardar cuando hayas terminado.",
+  "newHeaderInputCharacters": "Te quedan {{count}} caracteres permitidos.",
+  "newHeaderInputExceeded": "Has excedido el número permitido de caracteres.",
   "lightThemeText": "Claro",
   "darkThemeText": "Oscuro",
   "systemThemeText": "Sistema",
