Add teal and orange color options to localization files

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -20,9 +20,11 @@
   "downloadAllContentAsJson": "Lade meine Aufgabe(n) als JSON-Datei (.json) auf diesen Computer herunter.",
   "defaultColor": "Standardfarbe",
   "grayColor": "grau",
+  "tealColor": "blaugrün",
   "yellowColor": "gelb",
   "redColor": "rot",
   "blueColor": "blau",
+  "orangeColor": "orange",
   "greenColor": "grün",
   "pinkColor": "rosa",
   "deleteTitle": "Löschen",
