--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -20,9 +20,11 @@
   "downloadAllContentAsJson": "Download my task(s) to this computer in JSON file (.json)",
   "defaultColor": "Default color",
   "grayColor": "gray",
+  "tealColor": "teal",
   "yellowColor": "yellow",
   "redColor": "red",
   "blueColor": "blue",
+  "orangeColor": "orange",
   "greenColor": "green",
   "pinkColor": "pink",
   "deleteTitle": "Delete",
