--- a/public/i18n/eo.json
+++ b/public/i18n/eo.json
@@ -20,9 +20,11 @@
   "downloadAllContentAsJson": "Elŝuti miajn taskojn al ĉi tiu komputilo en JSON-dosiero (.json)",
   "defaultColor": "Defaŭlta koloro",
   "grayColor": "griza",
+  "tealColor": "teala",
   "yellowColor": "flava",
   "redColor": "ruĝa",
   "blueColor": "blua",
+  "orangeColor": "oranĝa",
   "greenColor": "verda",
   "pinkColor": "roza",
   "deleteTitle": "Forigi",
