--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -20,9 +20,11 @@
   "downloadAllContentAsJson": "Descargar mis tareas a este ordenador en un archivo JSON (.json)",
   "defaultColor": "Color predeterminado",
   "grayColor": "gris",
+  "tealColor": "verde azulado",
   "yellowColor": "amarillo",
   "redColor": "rojo",
   "blueColor": "azul",
+  "orangeColor": "naranja",
   "greenColor": "verde",
   "pinkColor": "rosa",
   "deleteTitle": "Eliminar",
