--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -1,7 +1,8 @@
 {
   "noContentTitle": "Aún no hay tareas.",
   "noContentDescription": "Por favor, añade alguna tarea primero.",
-  "browserSavedContentWarn": "Por razones de seguridad, no se recomienda usar esta aplicación en un ordenador y navegador públicos o compartidos. Tus notas podrían ser visibles para otros.",
+  "browserSavedContentAlertTitle": "¡Atención!",
+  "browserSavedContentAlertDescription": "Por razones de seguridad, no se recomienda usar esta aplicación en un ordenador y navegador públicos o compartidos. Tus notas podrían ser visibles para otros.",
   "newHeaderInputInput": "Añade tu tarea aquí. Haz clic en guardar cuando hayas terminado.",
   "newHeaderInputCharacters": "Te quedan {{count}} caracteres permitidos.",
   "newHeaderInputExceeded": "Has excedido el número permitido de caracteres.",
